[package]
name = "minisign-verify"
version = "0.1.6"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A small crate to verify Minisign signatures."
keywords = ["minisign", "ed25519", "signatures", "crypto"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-minisign-verify"
repository = "https://github.com/jedisct1/rust-minisign-verify"
categories = ["cryptography"]
edition = "2018"

[dependencies]
ct-codecs = "0.1.1"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
