[package]
name = "minisign-verify"
version = "0.2.0"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A small crate to verify Minisign signatures."
readme = "README.md"
keywords = ["minisign", "ed25519", "signatures", "crypto"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-minisign-verify"
repository = "https://github.com/jedisct1/rust-minisign-verify"
categories = ["cryptography"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
